--- a/src/pages/reviews.html
+++ b/src/pages/reviews.html
@@ -1,1 +1,194 @@
-<!DOCTYPE html><html lang="ru"><head>    <meta charset="UTF-8">    <meta name="viewport" content="width=device-width, initial-scale=1.0">    <link rel="icon" type="image/png" href="assets/images/icons/icon.png">    <title>Bronymiau - Bwè te 10 fwa pa jou se nòmal</title>    <link rel="stylesheet" href="/styles/variables.css">    <link rel="stylesheet" href="/styles/main.css">    <link rel="stylesheet" href="/styles/pages/reviews.css">    <link rel="stylesheet" href="/styles/components/footer.css">    <link rel="stylesheet" href="/styles/components/intro.css">    <link rel="stylesheet" href="/styles/components/preloader.css">    <link rel="stylesheet" href="/styles/components/notifications.css">    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600&display=swap" rel="stylesheet">    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600;700&display=swap" rel="stylesheet">    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">        <meta property="og:title" content="Don't click on me">        <meta property="og:description" content="Kinda a really cool person who succeeds in everything, even in your house">        <meta property="og:image" content="https://bronymiau.com/assets/images/general/preview.png">        <meta property="og:url" content="https://bronymiau.com">        <meta property="og:type" content="website">        <meta name="twitter:card" content="summary_large_image">        <meta name="twitter:site" content="@Bronymiau">        <meta name="twitter:title" content="Don't click on me">        <meta name="twitter:description" content="Kinda a really cool person who succeeds in everything, even in your house">        <meta name="twitter:image" content="https://bronymiau.com/assets/images/general/preview.png">        <meta name="theme-color" content="#8b5cf6">    <meta http-equiv="Content-Security-Policy"     content="default-src 'self';     script-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com;    style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com;    font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com;    img-src 'self' data: https: http:;    connect-src 'self' http: https:;    frame-ancestors 'self';">    <meta http-equiv="X-XSS-Protection" content="1; mode=block">    <meta http-equiv="X-Frame-Options" content="DENY">    <meta http-equiv="X-Content-Type-Options" content="nosniff">    <meta name="referrer" content="strict-origin-when-cross-origin"></head><body>    <div class="preloader">        <div class="loader"></div>    </div>    <div class="page-transition"></div>    <nav class="navbar">        <div class="nav-container">            <a href="/" class="nav-logo">                <img src="assets/images/icons/logo.png" alt="Bronymiau Logo">            </a>            <div class="nav-links">                <a href="/" class="nav-link" data-i18n="nav.main">Main</a>                <a href="/about" class="nav-link" data-i18n="nav.about">About me</a>                <a href="/art" class="nav-link" data-i18n="nav.artwork">Artwork</a>                <a href="/coding" class="nav-link" data-i18n="nav.coding">Coding</a>                <div class="ych-badge">                    <a href="/art" class="nav-link ych-link" data-i18n="nav.ych">                        YCH                        <span class="ych-price">30$</span>                        <div class="ych-preview">                            <img src="assets/images/general/ych2.png" alt="Current YCH" loading="lazy">                        </div>                    </a>                </div>            </div>        </div>    </nav>    <main class="reviews-content">        <div class="reviews-section">            <div class="reviews-stats">                <div class="stats-left">                    <h1 class="rating-big">-.-</h1>                    <div class="rating-stars"></div>                    <div class="reviews-count">- reviews</div>                    <div class="reviews-verified">                        <i class="fas fa-check-circle"></i>                        The reviews are left by real people and are not deleted.                    </div>                </div>                <div class="stats-right">                    <div class="rating-bar">                        <span class="rating-label">5 ★</span>                        <div class="progress-bar">                            <div class="progress" style="width: 0%"></div>                        </div>                    </div>                    <div class="rating-bar">                        <span class="rating-label">4 ★</span>                        <div class="progress-bar">                            <div class="progress" style="width: 0%"></div>                        </div>                    </div>                    <div class="rating-bar">                        <span class="rating-label">3 ★</span>                        <div class="progress-bar">                            <div class="progress" style="width: 0%"></div>                        </div>                    </div>                    <div class="rating-bar">                        <span class="rating-label">2 ★</span>                        <div class="progress-bar">                            <div class="progress" style="width: 0%"></div>                        </div>                    </div>                    <div class="rating-bar">                        <span class="rating-label">1 ★</span>                        <div class="progress-bar">                            <div class="progress" style="width: 0%"></div>                        </div>                    </div>                </div>            </div>            <div class="user-info" style="display: none;">                <div class="user-avatar-wrapper">                    <img class="user-avatar" src="" alt="User avatar">                </div>                <span class="username"></span>                <button type="button" class="sign-out-btn" style="display: block; cursor: pointer;">                    Sign Out                </button>            </div>            <div class="auth-section" style="display: none;">                <button class="discord-btn" onclick="window.location.href='/api/auth/discord'">                    <i class="fab fa-discord"></i>                    Sign in with Discord                </button>            </div>            <div class="review-form-container" style="display: none;">                <div class="review-form">                    <h3>Write your review</h3>                    <div class="rating-select">                        <span class="star" data-rating="1">☆</span>                        <span class="star" data-rating="2">☆</span>                        <span class="star" data-rating="3">☆</span>                        <span class="star" data-rating="4">☆</span>                        <span class="star" data-rating="5">☆</span>                    </div>                    <textarea                         placeholder="Share your experience (minimum 10 characters)"                        maxlength="500"                        class="review-textarea"                    ></textarea>                    <button class="submit-review-btn">Submit Review</button>                </div>            </div>            <div class="reviews-list"></div>        </div>    </main>    <script src="/scripts/main.js" type="module"></script>    <script src="/scripts/components/preloader.js"></script>    <script type="module" src="/scripts/language.js"></script>    <script src="/scripts/components/intro.js"></script>    <script src="/scripts/pages/reviews.js"></script>    <script src="/scripts/components/notifications.js"></script>    <script src="/scripts/components/footer.js"></script>    <footer class="footer">        <div class="footer-content">            <div class="footer-links">                <a href="/privacy" class="footer-link">Privacy Policy</a>                <a href="/art" class="footer-link">Price</a>                <a href="/socials" class="footer-link">Socials</a>                <a href="/veroid" class="footer-link">Veroid</a>            </div>            <div class="footer-right">                <div class="social-links">                    <a href="https://github.com/bronymiau" target="_blank" class="social-link">                        <i class="fab fa-github"></i>                    </a>                    <a href="https://x.com/Bronymiau" target="_blank" class="social-link">                        <i class="fab fa-twitter"></i>                    </a>                    <a href="https://discord.gg/zRasUhdPvb" target="_blank" class="social-link">                        <i class="fab fa-discord"></i>                    </a>                </div>                <div class="language-selector">                    <button class="language-btn">                        <img src="/assets/images/icons/en.png" alt="EN">                    </button>                    <div class="language-dropdown">                        <div class="language-option" data-lang="en">                            <img src="/assets/images/icons/en.png" alt="EN">                        </div>                        <div class="language-option" data-lang="ru">                            <img src="/assets/images/icons/ru.png" alt="RU">                        </div>                    </div>                </div>            </div>        </div>    </footer></body></html> 
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="assets/images/icons/icon.png">
+    <title>Bronymiau - Bwè te 10 fwa pa jou se nòmal</title>
+    <link rel="stylesheet" href="/styles/variables.css">
+    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/pages/reviews.css">
+    <link rel="stylesheet" href="/styles/components/footer.css">
+    <link rel="stylesheet" href="/styles/components/intro.css">
+    <link rel="stylesheet" href="/styles/components/preloader.css">
+    <link rel="stylesheet" href="/styles/components/notifications.css">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+        <meta property="og:title" content="Don't click on me">
+        <meta property="og:description" content="Kinda a really cool person who succeeds in everything, even in your house">
+        <meta property="og:image" content="https://bronymiau.com/assets/images/general/preview.png">
+        <meta property="og:url" content="https://bronymiau.com">
+        <meta property="og:type" content="website">
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:site" content="@Bronymiau">
+        <meta name="twitter:title" content="Don't click on me">
+        <meta name="twitter:description" content="Kinda a really cool person who succeeds in everything, even in your house">
+        <meta name="twitter:image" content="https://bronymiau.com/assets/images/general/preview.png">
+        <meta name="theme-color" content="#8b5cf6">
+    <meta http-equiv="Content-Security-Policy" 
+    content="default-src 'self'; 
+    script-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com;
+    style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com;
+    font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com;
+    img-src 'self' data: https: http:;
+    connect-src 'self' http: https:;
+    frame-ancestors 'self';">
+    <meta http-equiv="X-XSS-Protection" content="1; mode=block">
+    <meta http-equiv="X-Frame-Options" content="DENY">
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+    <meta name="referrer" content="strict-origin-when-cross-origin">
+</head>
+<body>
+    <div class="preloader">
+        <div class="loader"></div>
+    </div>
+    <div class="page-transition"></div>
+    <nav class="navbar">
+        <div class="nav-container">
+            <a href="/" class="nav-logo">
+                <img src="assets/images/icons/logo.png" alt="Bronymiau Logo">
+            </a>
+            <div class="nav-links">
+                <a href="/" class="nav-link" data-i18n="nav.main">Main</a>
+                <a href="/about" class="nav-link" data-i18n="nav.about">About me</a>
+                <a href="/art" class="nav-link" data-i18n="nav.artwork">Artwork</a>
+                <a href="/coding" class="nav-link" data-i18n="nav.coding">Coding</a>
+                <div class="ych-badge">
+                    <a href="/art" class="nav-link ych-link" data-i18n="nav.ych">
+                        YCH
+                        <span class="ych-price">30$</span>
+                        <div class="ych-preview">
+                            <img src="assets/images/general/ych2.png" alt="Current YCH" loading="lazy">
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <main class="reviews-content">
+        <div class="reviews-section">
+            <div class="reviews-stats">
+                <div class="stats-left">
+                    <h1 class="rating-big">-.-</h1>
+                    <div class="rating-stars"></div>
+                    <div class="reviews-count">- reviews</div>
+                    <div class="reviews-verified">
+                        <i class="fas fa-check-circle"></i>
+                        The reviews are left by real people and are not deleted.
+                    </div>
+                </div>
+                <div class="stats-right">
+                    <div class="rating-bar">
+                        <span class="rating-label">5 ★</span>
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 0%"></div>
+                        </div>
+                    </div>
+                    <div class="rating-bar">
+                        <span class="rating-label">4 ★</span>
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 0%"></div>
+                        </div>
+                    </div>
+                    <div class="rating-bar">
+                        <span class="rating-label">3 ★</span>
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 0%"></div>
+                        </div>
+                    </div>
+                    <div class="rating-bar">
+                        <span class="rating-label">2 ★</span>
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 0%"></div>
+                        </div>
+                    </div>
+                    <div class="rating-bar">
+                        <span class="rating-label">1 ★</span>
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 0%"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="user-info" style="display: none;">
+                <div class="user-avatar-wrapper">
+                    <img class="user-avatar" src="" alt="User avatar">
+                </div>
+                <span class="username"></span>
+                <button type="button" class="sign-out-btn" style="display: block; cursor: pointer;">
+                    Sign Out
+                </button>
+            </div>
+            <div class="auth-section" style="display: none;">
+                <button class="discord-btn" onclick="window.location.href='/api/auth/discord'">
+                    <i class="fab fa-discord"></i>
+                    Sign in with Discord
+                </button>
+            </div>
+            <div class="review-form-container" style="display: none;">
+                <div class="review-form">
+                    <h3>Write your review</h3>
+                    <div class="rating-select">
+                        <span class="star" data-rating="1">☆</span>
+                        <span class="star" data-rating="2">☆</span>
+                        <span class="star" data-rating="3">☆</span>
+                        <span class="star" data-rating="4">☆</span>
+                        <span class="star" data-rating="5">☆</span>
+                    </div>
+                    <textarea 
+                        placeholder="Поделитесь своим опытом (минимум 10 символов, максимум 500)"
+                        maxlength="500"
+                        class="review-textarea"
+                    ></textarea>
+                    <button class="submit-review-btn">Submit Review</button>
+                </div>
+            </div>
+            <div class="reviews-list"></div>
+        </div>
+    </main>
+    <script src="/scripts/main.js" type="module"></script>
+    <script src="/scripts/components/preloader.js"></script>
+    <script type="module" src="/scripts/language.js"></script>
+    <script src="/scripts/components/intro.js"></script>
+    <script src="/scripts/pages/reviews.js"></script>
+    <script src="/scripts/components/notifications.js"></script>
+    <script src="/scripts/components/footer.js"></script>
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="footer-links">
+                <a href="/privacy" class="footer-link">Privacy Policy</a>
+                <a href="/art" class="footer-link">Price</a>
+                <a href="/socials" class="footer-link">Socials</a>
+                <a href="/veroid" class="footer-link">Veroid</a>
+            </div>
+            <div class="footer-right">
+                <div class="social-links">
+                    <a href="https://github.com/bronymiau" target="_blank" class="social-link">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a href="https://x.com/Bronymiau" target="_blank" class="social-link">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="https://discord.gg/zRasUhdPvb" target="_blank" class="social-link">
+                        <i class="fab fa-discord"></i>
+                    </a>
+                </div>
+                <div class="language-selector">
+                    <button class="language-btn">
+                        <img src="/assets/images/icons/en.png" alt="EN">
+                    </button>
+                    <div class="language-dropdown">
+                        <div class="language-option" data-lang="en">
+                            <img src="/assets/images/icons/en.png" alt="EN">
+                        </div>
+                        <div class="language-option" data-lang="ru">
+                            <img src="/assets/images/icons/ru.png" alt="RU">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+</body>
+</html> 
