--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -16,17 +16,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600;700&display=swap" rel="stylesheet">
-        <meta property="og:title" content="Don't click on me">
-        <meta property="og:description" content="Kinda a really cool person who succeeds in everything, even in your house">
-        <meta property="og:image" content="https://bronymiau.com/assets/images/general/preview.png">
-        <meta property="og:url" content="https://bronymiau.com">
-        <meta property="og:type" content="website">
-        <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:site" content="@Bronymiau">
-        <meta name="twitter:title" content="Don't click on me">
-        <meta name="twitter:description" content="Kinda a really cool person who succeeds in everything, even in your house">
-        <meta name="twitter:image" content="https://bronymiau.com/assets/images/general/preview.png">
-        <meta name="theme-color" content="#8b5cf6">
+    <meta property="og:title" content="Don't click on me">
+    <meta property="og:description" content="Kinda a really cool person who succeeds in everything, even in your house">
+    <meta property="og:image" content="https://bronymiau.com/assets/images/general/preview.png">
+    <meta property="og:url" content="https://bronymiau.com">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@Bronymiau">
+    <meta name="twitter:title" content="Don't click on me">
+    <meta name="twitter:description" content="Kinda a really cool person who succeeds in everything, even in your house">
+    <meta name="twitter:image" content="https://bronymiau.com/assets/images/general/preview.png">
+    <meta name="theme-color" content="#8b5cf6">
 </head>
 <body>
     <div class="preloader">
