--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -20,7 +20,7 @@
     <meta property="og:image" content="https://bronymiau.com/assets/images/general/preview.png">
     <meta property="og:url" content="https://bronymiau.com">
     <meta property="og:type" content="website">
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@Bronymiau">
     <meta name="twitter:title" content="Don't click on me">
     <meta name="twitter:description" content="Kinda a really cool person who succeeds in everything, even in your house">
