--- a/src/pages/reviews.html
+++ b/src/pages/reviews.html
@@ -28,16 +28,25 @@
     <meta name="theme-color" content="#8b5cf6">
     <meta http-equiv="Content-Security-Policy" 
     content="default-src 'self'; 
-    script-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com;
+    script-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://www.googletagmanager.com https://www.google-analytics.com;
     style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com;
     font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com;
     img-src 'self' data: https: http:;
-    connect-src 'self' http: https:;
+    connect-src 'self' http: https: https://www.google-analytics.com;
     frame-ancestors 'self';">
     <meta http-equiv="X-XSS-Protection" content="1; mode=block">
     <meta http-equiv="X-Frame-Options" content="DENY">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
     <meta name="referrer" content="strict-origin-when-cross-origin">
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YH5QN1F15S"></script>
+    <script type="module">
+        import { config } from '/scripts/config.js';
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', config.googleAnalyticsId);
+    </script>
 </head>
 <body>
     <div class="preloader">
